# rpg_calib

./: CMakeLists.txt  README.md  manifest.xml  package.xml
cam/: bluefox_722_px4_pinhole.yaml  bluefox_847_cfo_atan.yaml  firefly_1_atan.yaml  povray_1_pinhole.yaml
cameras/: blender_1_pinhole.yaml  bluefox_032_color_atan.yaml  bluefox_035_color_atan.yaml  bluefox_035_color_pinhole.yaml  bluefox_25000742_atan.yaml  bluefox_25001268_atan.yaml  bluefox_25001269_atan.yaml  bluefox_26803032_pinhole.yaml  bluefox_273_atan.yaml  bluefox_273_atan_2.yaml  bluefox_273_pinhole.yaml  bluefox_297_atan.yaml  bluefox_449_pinhole.yaml  bluefox_503_nano_atan.yaml  bluefox_718_pinhole.yaml  bluefox_722_px4_atan.yaml  bluefox_742_px4_pinhole.yaml  bluefox_802_idsia_atan.yaml  bluefox_802_idsia_pinhole.yaml  bluefox_818_px4_atan.yaml  bluefox_826_atan.yaml  bluefox_826_pinhole.yaml  bluefox_847_cfo_pinhole.yaml  bluefox_853_idsia_atan.yaml  kinect_default_pinhole.yaml
trackables/: 2pac.yaml  biggie.yaml  drdre.yaml  tupac.yaml
