<?xml version="1.0"?>
<package>
  <name>rpg_calib</name>
  <version>0.0.0</version>
  <description>The rpg_calib package</description>
  <maintainer email="cfo@todo.com">cfo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
  
  
  
</package>
